<resources>
    <string name="app_name">WhyInside</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_filter">Filter</string>
    <string name="action_search">Search</string>

    <string name="label_skip_for_now">Skip for Now</string>
    <string name="label_signin_screen">Log in using the form below</string>
    <string name="label_signup_screen">Sign up by filling in the fields below</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="label_phone">Phone</string>
    <string name="label_ext">Ext.</string>
    <string name="label_u_or_e">Username or Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Log In</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_sign_in">Sign In</string>

    <string name="label_c_or_z">City or Zipcode</string>
    <string name="label_find_near_button">Find Latin Restaurants Near Me</string>

    <string name="label_dont_have_account">Don\'t have an account? %s</string>
    <string name="label_already_registered">Already registered? %s</string>

    <string name="label_tap_to_find">Tap to find restaurants nearby</string>
    <string name="label_find_near">Order From 30+ Latin Restaurants Near You.</string>

    <string name="label_by_signin_up" >By singing up you agree to our</string>
    <string name="label_terms_format" >%1$s, %2$s and %3$s</string>
    <string name="label_terms">Terms</string>
    <string name="label_c_policy">Cookie Policy</string>
    <string name="label_p_policy">Privacy Policy</string>
    <string name="left_nav_restaurants">Restaurants</string>
    <string name="left_nav_order_history">Order History</string>
    <string name="left_nav_account">Account</string>
    <string name="left_nav_refer_a_friend">Refer a Friend</string>
    <string name="left_nav_contacts">Contacts</string>
    <string name="left_nav_settings">Settings</string>
    <string name="left_nav_about">About WhyInside</string>
    <string name="left_nav_sign_out">Sign Out</string>

    <!--Settings Activity-->
    <string name="label_notifications">Notifications</string>
    <string name="label_load_images">Load Images</string>


    <!--ContactUsActivity-->
    <string name="label_our_hotline">Our hotline</string>
    <string name="label_freq_asked_question">Frequently asked questions</string>
    <string name="label__contact_note">Couldn\'t fint the answer to your question? Use the form below to get in touch with us</string>
    <string name="label_subject">Subject</string>
    <string name="label_write_question_here">Write your question here</string>
    <string name="label_send_message">Send Message</string>


    <!--AccountActivity-->
    <string name="label_general_inf">General information</string>
    <string name="label_security">Security</string>
    <string name="label_change_password">Change password</string>
    <string name="label_save_changes">Save Changes</string>

    <!--Security Activity-->
    <string name="label_changing_password">Changing Password</string>
    <string name="label_old_pass">Old password</string>
    <string name="label_new_pass">New password</string>


    <!--Refer Friends-->
    <string name="label_discount">Get $5 off for each new friend invited!</string>
    <string name="label_get_discount">You will get your $5 after their first order.</string>
    <string name="label_reg_link_note">Anyone with this link can register as your friend</string>
    <string name="label_referal_list">Referal List</string>
    <string name="label_accepted_lower">accepted</string>

    <string name="label_invite_on_facebook">Invite on Facebook</string>
    <string name="label_invite_on_twitter">Invite on Twitter</string>

    <!--Order Summary-->
    <string name="label_subtotal">Subtotal</string>
    <string name="label_tax">Tax</string>
    <string name="label_tip">Tip</string>
    <string name="label_total">Total</string>
    <string name="label_receivce_note">When would you like to receivce the order?</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_delivery_method">Delivery method</string>
    <string name="label_please_select_payment">Please select a payment method</string>
    <string name="label_cash">Cash</string>
    <string name="label_paypal">PayPal</string>
    <string name="label_credit_card">Credit Card</string>
    <string name="label_new_credit_card">New Credit Card details</string>
    <string name="label_enter_coupon_code">Enter a coupon code if applicable</string>
    <string name="label_delivery_instruction">Delivery Instructions</string>
    <string name="label_place_order">Place Order</string>

    <string name="activity_settings">Settings</string>
    <string name="activity_account">Account</string>
    <string name="activity_security">Security</string>
    <string name="activity_order_history">Order History</string>
    <string name="activity_contact_us">Contact Us</string>
    <string name="activity_faq">FAQ</string>
</resources>
