<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/page_padding"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"
        android:text="@string/label_general_inf"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:layout_alignParentLeft="true"
            android:text="@string/label_email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="18dp"
            android:layout_alignParentRight="true"
            android:text="info@whyinside.com"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/label_name"
            android:singleLine="true"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/name"
            android:background="@color/gray" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="20dp">
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/label_phone"
                android:singleLine="true"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/phone"
                android:background="@color/gray" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <EditText
                android:id="@+id/ext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/label_ext"
                android:singleLine="true"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/ext"
                android:background="@color/gray" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_security"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:layout_alignParentLeft="true"
            android:text="@string/label_password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="18dp"
            android:layout_alignParentRight="true"
            android:text="*********"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRed"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_change_password"/>

</LinearLayout>

    <TextView
        android:id="@+id/btn_save_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/label_save_changes"
        android:textSize="@dimen/field_text_size"
        android:gravity="center_horizontal"
        android:textColor="@color/colorWhite"
        android:padding="@dimen/field_padding"
        android:background="@drawable/field_bg_gray"/>
</RelativeLayout>