<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:padding="@dimen/page_padding"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorWhite"
            android:text="@string/label_signup_screen"
            android:gravity="center_horizontal"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/field_padding"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="@dimen/field_text_size"
            android:hint="@string/label_name"
            android:background="@drawable/field_bg_white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_line_margin"
            android:layout_marginBottom="@dimen/field_line_margin"
            android:orientation="horizontal"
            android:weightSum="4"
            android:background="@drawable/field_bg_white">
            <EditText
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/field_padding"
                android:gravity="center"
                android:layout_weight="3"
                android:textSize="@dimen/field_text_size"
                android:hint="@string/label_phone"
                android:singleLine="true"
                android:background="@android:color/transparent"/>
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/gray"
                />
            <EditText
                android:id="@+id/ext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/field_padding"
                android:gravity="center"
                android:singleLine="true"
                android:layout_weight="1"
                android:inputType="number"
                android:textSize="@dimen/field_text_size"
                android:hint="@string/label_ext"
                android:background="@android:color/transparent"/>
        </LinearLayout>


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/field_padding"
            android:gravity="center"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/field_text_size"
            android:hint="@string/label_email"
            android:background="@drawable/field_bg_white"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/field_padding"
            android:gravity="center"
            android:layout_marginTop="@dimen/field_line_margin"
            android:layout_marginBottom="@dimen/field_line_margin"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="@dimen/field_text_size"
            android:background="@drawable/field_bg_white"/>

        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_bg_red"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/field_text_size"
            android:gravity="center_horizontal"
            android:padding="@dimen/field_padding"
            android:text="@string/label_sign_up"/>

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite"

            android:text="@string/label_already_registered"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#55000000"
        android:layout_alignParentBottom="true"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/field_text_size"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="@string/label_by_signin_up"/>
            <TextView
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/field_text_size"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>