<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/page_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/label_signin_screen"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/field_text_size" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_bg_white"
            android:gravity="center"
            android:hint="@string/label_u_or_e"
            android:inputType="textEmailAddress"
            android:padding="@dimen/field_padding"
            android:singleLine="true"
            android:textSize="@dimen/field_text_size" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/field_line_margin"
            android:layout_marginTop="@dimen/field_line_margin"
            android:background="@drawable/field_bg_white"
            android:gravity="center"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:padding="@dimen/field_padding"
            android:singleLine="true"
            android:textSize="@dimen/field_text_size" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/field_bg_selector_red"
                android:gravity="center_horizontal"
                android:padding="@dimen/field_padding"
                android:text="@string/label_login"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/field_text_size" />

            <ProgressBar
                android:id="@+id/singInProgress"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:visibility="gone"
                android:backgroundTint="@color/colorFacebook"
                android:padding="5dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/label_dont_have_account"
            android:textColor="@color/colorWhite"

            android:textSize="@dimen/field_text_size" />

        <TextView
            android:id="@+id/btn_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_bg_selector_green"
            android:gravity="center_horizontal"
            android:padding="@dimen/field_padding"
            android:text="Skip For Now"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/field_text_size" />

    </LinearLayout>
</RelativeLayout>