<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:src="@drawable/splash_bg"
        android:scaleType="centerCrop"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/page_padding"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_logo"/>

            <ImageView
                android:id="@+id/find_location"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_find_location"
                android:layout_margin="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/label_tap_to_find"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/label_find_near"
                android:layout_marginBottom="30dp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/city_zip_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/field_line_margin"
                android:hint="@string/label_c_or_z"
                android:textSize="@dimen/field_text_size"
                android:padding="@dimen/field_padding"
                android:background="@drawable/field_bg_white"/>

            <TextView
                android:id="@+id/btn_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/field_text_size"
                android:padding="@dimen/field_padding"
               android:gravity="center_horizontal"
                android:text="@string/label_find_near_button"
                android:background="@drawable/field_bg_red"/>
            </LinearLayout>
</RelativeLayout>