<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/page_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/label_changing_password"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/label_old_pass"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:singleLine="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/old_password"
                    android:background="@color/gray" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/label_new_pass"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:singleLine="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/new_password"
                    android:background="@color/gray" />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/btn_save_changes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/field_bg_green"
            android:gravity="center_horizontal"
            android:padding="@dimen/field_padding"
            android:text="@string/label_save_changes"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/field_text_size" />
    </RelativeLayout>
</LinearLayout>